crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__math_codegen_pi_const_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 875
expression: src
---
fn f() {
    std::f64::consts::PI;
}
