crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__math_codegen_pow_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 884
expression: src
---
fn f() {
    (2 as f64).powf(10 as f64);
}
