crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__math_codegen_sqrt_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 869
expression: src
---
fn f() {
    (16 as f64).sqrt();
}
