crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__random_codegen_choice_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 908
expression: src
---
fn f() {
    rand::seq::SliceRandom::choose(&vec, &mut rand::thread_rng()).cloned();
}
