crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__random_codegen_float_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 890
expression: src
---
fn f() {
    rand::rng().random::<f64>();
}
