crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__random_codegen_int_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 893
expression: src
---
fn f() {
    rand::thread_rng().gen_range(1..=100);
}
