crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__random_codegen_shuffle_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 908
expression: src
---
fn f() {
    {
        let mut __v = vec;
        rand::seq::IndexedRandom::shuffle(&mut __v, &mut rand::rng());
        __v
    };
}
