crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__sort_codegen_literal_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 930
expression: src
---
fn f() {
    {
        let mut __v = vec![3, 1, 2];
        __v.sort();
        __v
    };
}
