crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__strings_codegen_join_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 953
expression: src
---
fn f() {
    vec.join(&",".to_string());
}
