crates/buff-lang-codegen-rust/tests/snapshots/utility_codegen__strings_codegen_replace_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/utility_codegen.rs
assertion_line: 983
expression: src
---
fn f() {
    "a1b2".replace("1", "X");
}
